--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,10 @@
+== 0.2.0 2015-09-22
+
+  * Adding multipass filter.
+  * Better resize handling.
+  * Created Anaglyph renderer.
+  * Fixed sub-rendering (camera update).
+  
 == 0.1.1 2015-09-03
 
   * Fixed main module.
